first commit. Added images in asset

--- a/style/app.scss
+++ b/style/app.scss
@@ -5,7 +5,7 @@
 }
 
 html {
-  font-size: 62.5%;
+  font-size: 200.5%;
 }
 
 #app {
@@ -15,6 +15,7 @@ html {
   width: 100vw;
   height: 100vh;
   text-align: center;
+  background: #131526;
 
   .content {
     flex: 1;
