--- a/style/global/_variables.scss
+++ b/style/global/_variables.scss
@@ -1,6 +1,7 @@
-$primary-color: purple;
-$secondary-color: blue;
+$primary-color: #ffffff;
+$secondary-color: #4e5169;
 
-$text-color: white;
-$font-text: 'Helvetica', 'Arial';
-$font-header: "Arial Black", Gadget, sans-serif;
+// $font-text: 'Helvetica', 'Arial';
+// $font-header: "Arial Black", Gadget, sans-serif;
+
+$grid-gap: 20px;
