--- a/style/global/_variables.scss
+++ b/style/global/_variables.scss
@@ -4,4 +4,6 @@ $secondary-color: #4e5169;
 // $font-text: 'Helvetica', 'Arial';
 // $font-header: "Arial Black", Gadget, sans-serif;
 
-$grid-gap: 1.5vw;
+$gutter: 2%;
+$fixed-gutter: 15px;
+$norm-screen-width: 1200px;
